--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <div class="card timeline-card">
       <h2>2006</h2>
       <h3>Peak GHG Emissions</h3>
-<!-- Add image -->
+      <img src="img/transportation-wind.jpg" alt="Peak GHG Emissions" />
       <p class="desc">
         This year marks Intel's highest annual greenhouse gas emissions 
         for operations. Over subsequent years, Intel invests heavily in 
@@ -98,7 +98,7 @@
     <div class="card timeline-card">
       <h2>2020</h2>
       <h3>RISE Strategy</h3>
-      <!-- Add image -->
+      <img src="img/GPTimg6.png" alt="RISE Strategy" />
       <p class="desc">
         Intel launches its RISE (Responsible, Inclusive, Sustainable, 
         Enabling) strategy and 2030 goals, aiming to drive industry-wide 
@@ -110,7 +110,7 @@
     <div class="card timeline-card">
       <h2>2022</h2>
       <h3>Net-Zero By 2040</h3>
-      <!-- Add image -->
+      <img src="img/img7.png" alt="Net-Zero By 2040" />
       <p class="desc">
         Intel announces its commitment to achieve net-zero greenhouse 
         gas emissions (Scope 1 and 2) across its global operations 
@@ -122,7 +122,7 @@
     <div class="card timeline-card">
       <h2>2023</h2>
       <h3>Renewable Electricity</h3>
-      <!-- Add image -->
+      <img src="img/img8.png" alt="Renewable Electricity" />
       <p class="desc">
         The company achieves 99% renewable electricity usage worldwide, 
         helping to drastically lower carbon emissions and driving progress 
@@ -134,7 +134,7 @@
     <div class="card timeline-card">
       <h2>2024</h2>
       <h3>Sustainability Summit</h3>
-      <!-- Add image -->
+      <img src="img/img9.png" alt="Sustainability Summit" />
       <p class="desc">
         Intel hosts its first Sustainability Summit, uniting suppliers, 
         government officials, and industry leaders to collaborate on 
